2004-08-17 08:45 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.1 Release. Interface to FUN3D 3.3.1.
	
2004-08-16 15:00 Mike Park  <mike.park@nasa.gov>

	* geomSGIn32 added static SDK routines and headers (CVS tag sdk1_1_4)

2004-08-16 14:20 Mike Park  <mike.park@nasa.gov>

	* configure.ac added a --enable-exec argument that controls
	whether the refine and MesherX executables are built. The refine
	lib is always built.
	* src/Makefile.am added BUILD_EXECUTABLES if block.

2004-08-16 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c removed all references to SDK UG_API and Goolache.

2004-08-13 11:00 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) commented out call to
	UGMgr_LoadLibs in order to not require UG_Plugins meshers. Note
	this may need to be added back in if you have a old CAPRI (GridEx)
	restart

2004-08-10 13:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) silenced reporting of
	CAD parameter mismatches on restart. Note that there is a bug in
	the recreation of CAPRI restarts that still needs to be fixed.

2004-08-09 16:50 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R =
	MIN(sqrt(AR),2.5). Previous value of MIN(sqrt(AR),5.0) went
	unstable for double cone boom case.

2004-08-09 08:05 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.0 Release.
	
2004-08-04 16:04 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) fixed a bug that inserted
	left-handed boundary triangles into the mesh.

2004-08-03 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) added a call to
	gridRemoveTwoFaceCell. Added an extra gridCellHasGhostNode check
	for local only (queue==NULL) runs.

2004-08-03 15:55 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) will remove a cell with
	two faces with the same face Id and swap the face diagonal.

2004-08-03 14:20 Mike Park  <mike.park@nasa.gov>
